--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -59,7 +59,7 @@
     width: 100%;
     text-decoration: none;
     color: #000000;
-    background-color: #ffffff;
+    background-color: #c1c1c1;
     line-height: 30px;
     border-bottom-style: solid;
     border-bottom-width: 1px;
