--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -58,9 +58,8 @@
     display: block;
     width: 100%;
     text-decoration: none;
-    
     color: #000000;
-    background-color: #c1c1c1;
+    background-color: #ffffff;
     line-height: 30px;
     border-bottom-style: solid;
     border-bottom-width: 1px;
